adding svg icons

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <title>SVG with JS</title>
 </head>
 <body>
+  <main>
+    <h1 class="hidden">Responsive SVG Example</h1>
+    <h2 class="main-headline">Using Flexbox and SVG for Layout</h2>
+    <section id="raster-vector">
+      <h2 class="hidden">vector vs svg</h2>
+      <h3>SVG as raster and vector</h3>
+      <div id="image-container">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpg">
+        <img src="images/newBadge.svg" alt="badge as vector - this is the svg">
+      </div>
+    </section>
+  </main>
   <script src="js/main.js"></script>
 </body>
 </html>
