--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section id="raster-vector">
       <h2 class="hidden">vector vs svg</h2>
-      <h3>SVG as raster and vector</h3>
+      <h3 class="svgHeading">SVG as raster and vector</h3>
 
       <div id="image-container">
         <img src="images/newBadge.jpg" alt="badge as raster - this is the jpg" id="badgeJPG">
