--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <h2 class="hidden">vector vs svg</h2>
       <h3 class="svgHeading">SVG as raster and vector</h3>
 
+      <button class="switch-type">Change Headline Text</button>
+
       <div id="image-container">
         <img src="images/newBadge.jpg" alt="badge as raster - this is the jpg" id="badgeJPG">
         <img src="images/newBadge.svg" alt="badge as vector - this is the svg" id="badgeSVG">
