added new selectors for js and html

--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
 
       <div id="image-container">
         <img src="images/newBadge.jpg" alt="badge as raster - this is the jpg" id="badgeJPG">
-        <img src="images/newBadge.svg" alt="badge as vector - this is the svg" id="badgeSVG">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpg" id="badgeJPG2">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpg" id="badgeJPG3">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpg" id="badgeJPG4">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpg" id="badgeJPG5">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpg" id="badgeJPG6">
       </div>
     </section>
 
+    <section class="container">
+      <h3>this is an svg as an object</h3>
+      <object data="images/newBadge.jpg" type="image/svg+xml" class="svg-object" id="svgObject"></object>
+      <button>Click me!</button>
+    </section>
     <section>
       <!-- inline SVG start -->
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="badge" x="0px" y="0px"
